alignment issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3214,27 +3214,16 @@ section {
     font-size: 20px;
 }
 
-/* all bullets hidden by default */
-.testimonial-swiper .swiper-pagination-bullet {
+/* .testimonial-swiper .swiper-pagination-bullet {
     display: none;
 }
 
-/* show active bullet */
-.testimonial-swiper .swiper-pagination-bullet-active {
-    display: inline-block;
+.testimonial-swiper .swiper-pagination-bullet-active,
+.testimonial-swiper .swiper-pagination-bullet-active-next,
+.testimonial-swiper .swiper-pagination-bullet-active-next-next {
+    display: inline-block !important;
 }
 
-/* show prev bullet */
-.testimonial-swiper .swiper-pagination-bullet-active-prev {
-    display: inline-block;
-}
-
-/* show next bullet */
-.testimonial-swiper .swiper-pagination-bullet-active-next {
-    display: inline-block;
-}
-
-/* optional styling */
 .custom-bullet {
     width: 10px;
     height: 10px;
@@ -3247,16 +3236,8 @@ section {
 
 .swiper-pagination-bullet-active {
     opacity: 1;
-}
+} */
 
-.swiper-slide {
-    /* opacity: .5; */
-    transition: opacity 0.3s ease;
-}
-
-.swiper-slide-active {
-    /* opacity: 1; */
-}
 
 /* tools - end */
 /* module - start */
